Add anchors to SchedulingActivityDirective
* Replace MerlinActivityInstance with ActivityDirective
* Replace PlannedActivityInstance with ActivityDirective
* Assign SchedulingActivityDirectives generated from ActivityDirectives an ID of negative the ActivityDirectiveId. This allows us to always know what the non-null anchorId should be during the conversion.